--- a/app/views/votes/show.html.haml
+++ b/app/views/votes/show.html.haml
@@ -1,14 +1,3 @@
-%p#notice= notice
-
+%h1= @vote.title
 %p
-  %b Title:
-  = @vote.title
-%p
-  %b Description:
   = @vote.description
-%p
-  %b Password:
-  = @vote.password
-%p
-  %b Closed:
-  = @vote.closed
