--- a/app/views/votes/show.html.haml
+++ b/app/views/votes/show.html.haml
@@ -1,5 +1,10 @@
-%h1= @vote.title
+%h1 投票シート
+
 %p
+  タイトル:
+  = @vote.title
+%p
+  説明:
   = @vote.description
 
 %table
@@ -12,3 +17,19 @@
       %tr
         %td= item.name
         %td= item.addition
+
+%p
+  回答 URL:
+  = link_to new_vote_answer_url(vote_id: @vote.uuid), new_vote_answer_url(vote_id: @vote.uuid), target: '_blank'
+
+%p
+  管理パスワード:
+  = @vote.password
+
+= form_for @vote do |f|
+  = f.label :closed_false, '投票を受け付ける'
+  = f.radio_button :closed, false, value: false
+  = f.label :closed_true, '投票を締め切る'
+  = f.radio_button :closed, true, value: true
+
+  = f.submit '更新'
