--- a/app/views/answers/show.html.haml
+++ b/app/views/answers/show.html.haml
@@ -21,7 +21,7 @@
       %tr
         %td= item.name
         %td= item.addition
-        %td= @answer.items.find{|i| i.id == item.id}.try(:rank)
+        %td= @answer.items.find{|i| i.vote_item_id == item.id}.try(:rank)
 
 = link_to 'Edit', edit_vote_answer_path(@vote, @answer)
 \|
