--- a/app/views/layouts/welcome.html.haml
+++ b/app/views/layouts/welcome.html.haml
@@ -1,18 +1,10 @@
 !!!
-%html{:lang => "en"}
+%html{lang: 'ja'}
   %head
-    %meta{:charset => "utf-8"}/
-    %meta{:content => "IE=edge", "http-equiv" => "X-UA-Compatible"}/
-    %meta{:content => "width=device-width, initial-scale=1", :name => "viewport"}/
-    -# %meta{:content => "", :name => "description"}/
-    -# %meta{:content => "", :name => "author"}/
-    -# %link{:href => "../../favicon.ico", :rel => "icon"}/
-
-    %title MAKE A NICE VOTE
+    = render 'layouts/head'
 
     = stylesheet_link_tag    'welcome', media: 'all'
     = javascript_include_tag 'application'
-    = csrf_meta_tags
   %body
     .site-wrapper
       .site-wrapper-inner
