--- a/app/views/votes/_form.html.haml
+++ b/app/views/votes/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @vote do |f|
+= form_for @vote, html: { role: 'form' } do |f|
   - if @vote.errors.any?
     #error_explanation
       %h2= "#{pluralize(@vote.errors.count, "error")} prohibited this vote from being saved:"
@@ -6,27 +6,43 @@
         - @vote.errors.full_messages.each do |msg|
           %li= msg
 
-  %h2 基本情報
-  .field
+  .form-group
     = f.label :title
-    = f.text_field :title
-  .field
+    = f.text_field :title, class: 'form-control'
+  .form-group
     = f.label :description
-    = f.text_area :description
-  .field
+    = f.text_area :description, class: 'form-control'
+  .form-group
     = f.label :password
-    = f.text_field :password
-  .field
-    = f.label :closed
-    = f.check_box :closed
+    = f.password_field :password, class: 'form-control'
+    %p.help-block
+      投票の締め切りや、回答の閲覧に使います。
 
-  %h2 項目
-  = f.fields_for :items do |item_f|
-    .field
-      = item_f.label :name
-      = item_f.text_field :name
-    .field
-      = item_f.label :addition
-      = item_f.text_area :addition
+  .row
+    = f.fields_for :items do |item_f|
+      .form-group.col-xs-6
+        = item_f.label :name
+        = item_f.text_field :name, class: 'form-control'
+        %p.help-block
+          ここに入力した内容に対して、投票が行われます。
+
+      .form-group.col-xs-6
+        = item_f.label :addition
+        = item_f.text_area :addition, class: 'form-control'
+        %p.help-block
+          追加の情報があれば別途ここに記入できます。
+
+  .checkbox
+    = f.label :closed do
+      = f.check_box :closed
+      投票を閉めきった状態でスタートする(後で変更できます)
+
+  .bs-callout.bs-callout-danger
+    %h4 一度作成すると変更ができません。
+    %p
+      一度作成したら、各項目の追加/変更/削除はできません。
+      変更したくなった場合は新しくつくりなおしてください。
+      30日が過ぎた投票は自動的に削除されます。(予定)
+
   .actions
-    = f.submit 'Save'
+    = f.submit '上記内容で投票を開始する', class: 'btn btn-primary btn-lg'
