--- a/app/views/answers/index.html.haml
+++ b/app/views/answers/index.html.haml
@@ -1,21 +1,23 @@
 %h1 Listing answers
 
-%table
-  %tr
-    %th 名前
-    %th コメント
-    - @vote.items.order(:id).each do |item|
-      %th= item.name
-    %th
-    %th
-    %th
-
-  - @answers.each do |answer|
+%table.table.table-hover
+  %thead
     %tr
-      %td= answer.user_name
-      %td= answer.comment
-      - answer.items.order(:vote_item_id).each do |item|
-        %td= item.rank
-      %td= link_to 'Show', [@vote, answer]
-      %td= link_to 'Edit', edit_vote_answer_path(@vote, answer)
-      %td= link_to 'Destroy', [@vote, answer], :method => :delete, :data => { :confirm => 'Are you sure?' }
+      %th 名前
+      %th コメント
+      - @vote.items.order(:id).each do |item|
+        %th= item.name
+      %th
+      %th
+      %th
+
+  %tbody
+    - @answers.each do |answer|
+      %tr
+        %td= answer.user_name
+        %td= answer.comment
+        - answer.items.order(:vote_item_id).each do |item|
+          %td= item.rank
+        %td= link_to 'Show', [@vote, answer]
+        %td= link_to 'Edit', edit_vote_answer_path(@vote, answer)
+        %td= link_to 'Destroy', [@vote, answer], :method => :delete, :data => { :confirm => 'Are you sure?' }
