--- a/app/views/votes/show.html.haml
+++ b/app/views/votes/show.html.haml
@@ -4,7 +4,7 @@
 %p= @vote.title
 
 %h2= Vote.human_attribute_name(:description)
-%p= simple_format @vote.description
+%p= simple_format auto_link @vote.description
 
 %table.table.table-striped
   %thead
@@ -15,7 +15,7 @@
     - @vote.items.order(:id).each do |item|
       %tr
         %td= item.name
-        %td= simple_format item.addition
+        %td= simple_format auto_link item.addition
 
 %hr
 
