--- a/app/views/answers/index.html.haml
+++ b/app/views/answers/index.html.haml
@@ -34,4 +34,7 @@
     - @vote.items.each do |vote_item|
       %tr
         %td= vote_item.name
-        %td= @answers.joins(:items).where(answer_items: {vote_item_id: vote_item.id}).group(:rank).count.sort_by(&:first).to_h
+        - c = @answers.joins(:items).where(answer_items: {vote_item_id: vote_item.id}).group(:rank).count
+        - Rails.logger.info '*' * 30
+        - Rails.logger.info c.inspect
+        %td= c.sort_by(&:first).to_h
