Use kindly word

--- a/app/views/answers/_form.html.haml
+++ b/app/views/answers/_form.html.haml
@@ -10,11 +10,11 @@
 .bs-callout.bs-callout-primary
   %h4 投票の仕方
   %p
-    投票者名と、各項目のランクを埋めます。必要があればコメントに追記する事ができます。
+    投票者名と、各項目の順位を埋めます。必要があればコメントに追記する事ができます。
 .bs-callout.bs-callout-primary
-  %h4 ランクについて
+  %h4 順位について
   %p
-    ランクには数字を入力します。数字が若い方が上となります。何も入力しない == その項目には投票しない、という事になります。
+    順位には数字を入力します。数字が若い方が上となります。何も入力しない == その項目には投票しない、という事になります。
   %p
     A, B, C の項目があって、A を一位、B を二位、C には投票しない、とする場合には、A に 1, B に 2, C には何も入れない、というようにします。
 
@@ -35,7 +35,7 @@
       %tr
         %th 項目名
         %th 追加情報
-        %th ランク
+        %th 順位
     %tbody
       = f.fields_for :items do |item_f|
         %tr
